--- a/todo_app/app/views/todo_lists/index.html.erb
+++ b/todo_app/app/views/todo_lists/index.html.erb
@@ -1,14 +1,23 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Todo lists</h1>
-
-<div id="todo_lists">
-  <% @todo_lists.each do |todo_list| %>
-    <%= render todo_list %>
-    <p>
-      <%= link_to "Show this todo list", todo_list %>
-    </p>
-  <% end %>
+<div style="text-align: center;">
+  <h1>Welcome user to the To Do App!</h1>
+  <p>This is a simple to-do application built with Ruby on Rails.</p>
 </div>
 
-<%= link_to "New todo list", new_todo_list_path %>
+<div style="margin: 0 auto; max-width: 600px;">
+  <h2>Current Todo lists</h2>
+
+  <table>
+    <% @todo_lists.each do |todo_list| %>
+      <tr>
+        <td>
+          <%= render todo_list %>
+        </td>
+        <td style="vertical-align: middle;">
+          <%= link_to "Show", todo_list, class: "btn btn-primary" %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+
+  <%= link_to "New todo list", new_todo_list_path, class: "btn btn-primary" %>
+</div>
